# fasteval

./: .gitignore  Cargo.toml
benches/: bench_f32_f64.rs  bench_int.rs  bench_serde.rs
benches/results/: results_f32_f64
examples/: compile.rs  compile_serde.rs  ez.rs  internals.rs  ns_emptynamespace.rs
src/: compiler.rs  error.rs  evaler.rs  evalns.rs  ez.rs  lib.rs  parser.rs  slab.rs
tests/: compile.rs  eval.rs  evalns.rs  from_3rd.rs  from_go.rs  parse.rs
