[package]
name = "fasteval"
version = "0.2.4"
authors = ["Christopher Sebastian <christopher@likebike.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/likebike/fasteval"
documentation = "https://docs.rs/fasteval/"
description = """Fast evaluation of algebraic expressions"""
keywords = ["evaluate", "math", "algebra", "calculate", "expression"]
categories = ["mathematics", "science", "parser-implementations"]
edition = "2018"

[dependencies]
serde = { version = "1.0.116", optional = true, features = ["derive"] }

[dev-dependencies]
serde_cbor = "0.11.1"

[profile.bench]
debug = true
lto = true

[features]
#default = ["alpha-keywords"]
default = ["alpha-keywords", "serialize"]
serialize = ["serde"]
alpha-keywords = []  # Enable 'NaN', 'inf', 'and', 'or'
unsafe-vars = []     # tinyexpr-style pointer-based variables.
nightly = []         # Enable features that depend on Rust nightly.

